examples/test/testpolicy14715.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14715
  namespace: namespace111
spec:
  podSelector:
    matchLabels:
      key36: value14
      key24: value0
      key37: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value46
          key44: value16
          key20: value18
